--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,6 @@
     </properties>
     <dependencies>
 
-
-        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
@@ -25,19 +23,18 @@
         </dependency>
 
 
-        <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.1.0-M2</version>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version>
+            <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
 
@@ -45,34 +42,35 @@
         <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-core</artifactId>
-            <version>3.45.1</version>
+            <version>3.39.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.jdbi/jdbi3-sqlobject -->
         <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-sqlobject</artifactId>
-            <version>3.45.1</version>
+            <version>3.39.1</version>
         </dependency>
 
     </dependencies>
 
     <build>
-        <finalName>EscuelaTatiapp</finalName>
+        <finalName>EscuelaTatiApp</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>3.3.2</version>
+                    <version>3.2.2</version>
                 </plugin>
 
                 <plugin>
 
                     <!--
-                        mvn tomcat7:deplay para desplegar
-                        mvn tomcat7:undeplay para replegar
-                        mvn tomcat7:dedeplay para redesplegar                    -->
+                        mvn tomcat7:deploy para desplegar
+                        mvn tomcat7:undeploy para replegar
+                        mvn tomcat7:dedeploy para redesplegar
+                     -->
                     <groupId>org.apache.tomcat.maven</groupId>
                     <artifactId>tomcat7-maven-plugin</artifactId>
                     <version>2.2</version>
@@ -80,8 +78,8 @@
                         <url>http://localhost:8080/manager/text</url>
                         <server>tomcat9</server>
                         <path>escuela</path>
-                        <username>tomcat</username>
-                        <password>tomcat</password>
+                        <username>admin</username>
+                        <password>admin</password>
                     </configuration>
                 </plugin>
             </plugins>
